<resources>
    <string name="app_name">College Trade</string>
    <string name="app_tag_line">ONE-STOP SOLUTION FOR ALL YOUR COLLEGE NEEDS</string>
    <string name="app_icon">App Icon</string>
    <string name="app_version">v 1.0.0</string>

    <string name="facebook_application_id">356210038674161</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="sell">Sell</string>
    <string name="favorites">Favourites</string>
    <string name="account">Account</string>

    <string name="categories_title">WHAT ARE YOU OFFERING?</string>
    <string name="other_stuff">Other Stuff</string>
    <string name="recreational_items">Recreational\nItems</string>
    <string name="electronic_appliances">Electronic\nAppliances</string>
    <string name="vehicles">Vehicles</string>
    <string name="academic_material">Academic\nMaterial</string>
    <string name="ad_title_hint">Ad title</string>
    <string name="ad_description_hint">Ad Description</string>
    <string name="ad_details_title">INCLUDE SOME DETAILS</string>
    <string name="next">Next</string>
    <string name="upload_photo_title">UPLOAD A PHOTO</string>
    <string name="gallery_icon">Gallery Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="ad_image">Ad Image</string>
    <string name="set_price_title">SET A PRICE</string>
    <string name="ad_price_hint">Price</string>
    <string name="Rs">"\u20B9 "</string>
    <string name="price">"\u20B9 %s"</string>
    <string name="permission_dialog_title">Grant Permission</string>
    <string name="permission_dialog_message">College Trade needs permission to access Gallery</string>
    <string name="proceed">Proceed</string>
    <string name="no_thanks">No Thanks</string>
    <string name="permission_denial_message">Picking images from Gallery requires permission that you just denied.</string>
    <string name="review_details_title">REVIEW YOUR DETAILS</string>
    <string name="post_ad">Post Ad</string>
    <string name="your_name">Your Name</string>
    <string name="provide_proper_details">Provide a proper title and description first</string>
    <string name="something_went_wrong">Oops! Something went wrong. Try again in a while…</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="ad_not_posted">Your ad was NOT posted…</string>
    <string name="posting_ad">Posting your ad…</string>
    <string name="ad_posted">Your ad has been successfully posted.</string>
    <string name="sign_in_failed">Sign In Failed. Try again…</string>
    <string name="search_college_trade">Search College Trade</string>
    <string name="filter">Filter</string>
    <string name="search_icon">Search Icon</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="chat">Chat</string>
    <string name="ad_posted_by">Ad Posted By</string>
    <string name="description">Description</string>
    <string name="views_icon">Views Icon</string>
    <string name="likes_icon">Likes Icon</string>
    <string name="seller_image">Seller Image</string>
    <string name="close_icon">Close Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="more_icon">More Icon</string>
    <string name="share_text">Hey check out this ad on College Trade about \"%s\"\nhttps://arpitshukla62.github.io/college-trade/?ad=%s</string>
    <string name="app_logo_and_name">App Logo and Name</string>
    <string name="my_ads_icon">My Ads Icon</string>
    <string name="my_ads">My Ads</string>
    <string name="feedback_icon">Feedback Icon</string>
    <string name="feedback">Give Feedback</string>
    <string name="invite_a_friend_icon">Invite a friend Icon</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="rate_us_icon">Rate Us Icon</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Logout</string>
    <string name="college_trade_logo">College Trade Logo</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="invite_msg">Join me on College Trade, an amazing app for buying and selling products in college campus.\nhttps://arpitshukla62.github.io/college-trade/</string>
    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="drawer_icon">Navigation Drawer Icon</string>
    <string name="arpit_shukla">Arpit Shukla</string>

</resources>
