<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/chats"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats"/>

    <item
        android:id="@+id/sell"
        android:enabled="true"
        android:icon="@drawable/ic_sell"
        android:title="@string/sell"/>

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"/>

</menu>