<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.arpit.collegetrade.sell.reviewDetails.ReviewDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/white"
        tools:context=".sell.reviewDetails.ReviewDetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/review_details_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/review_details_info_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/seller_image"
            sellerImage="@{viewModel.sellerImage}"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text"
            tools:src="@drawable/default_user_image" />

        <TextView
            android:id="@+id/your_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/your_name"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/seller_name"
            app:layout_constraintStart_toEndOf="@+id/seller_image"
            app:layout_constraintTop_toTopOf="@+id/seller_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/seller_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Anonymous"
            android:ems="10"
            android:inputType="textCapSentences"
            android:text="@={viewModel.name}"
            app:layout_constraintBottom_toBottomOf="@+id/seller_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seller_image"
            app:layout_constraintTop_toBottomOf="@+id/your_name_text"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_post"
            isEnabled="@{viewModel.buttonEnabled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:foreground="?selectableItemBackground"
            android:onClick="@{() -> viewModel.postAd()}"
            android:text="@string/post_ad"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>